--- a/app/src/main/res/layout/dialog_ongoing_ready.xml
+++ b/app/src/main/res/layout/dialog_ongoing_ready.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_margin="36dp"
-                android:layout_width="match_parent" android:layout_height="160dp">
+                android:layout_width="match_parent" android:layout_height="160dp" android:background="@drawable/border">
     <RelativeLayout
             android:layout_centerInParent="true"
             android:id="@+id/btn_ongoing_ready_dialog_ok"
