--- a/app/src/main/res/layout/dialog_waiting_accept.xml
+++ b/app/src/main/res/layout/dialog_waiting_accept.xml
@@ -2,27 +2,182 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_margin="36dp"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        tools:layout_editor_absoluteY="61dp"
-        tools:layout_editor_absoluteX="36dp">
-    <RelativeLayout
-            android:layout_centerInParent="true"
-            android:id="@+id/btn_second_dialog_ok"
-            android:layout_margin="16dp"
-            android:layout_width="94dp"
-            android:layout_height="71dp"
-            android:background="@drawable/border" android:layout_marginTop="56dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="48dp" android:layout_marginStart="48dp">
-        <TextView
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
-                android:text="5분"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" android:textSize="24sp"/>
-    </RelativeLayout>
+        android:layout_height="340dp" tools:layout_editor_absoluteY="25dp">
 
+
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_accept_dialog_5m" android:background="@drawable/border"
+                tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
+
+            <TextView
+                    android:text="5분"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/textView3"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    android:textSize="24sp"/>
+        </android.support.constraint.ConstraintLayout>
+        <Space
+                android:layout_width="12dp"
+                android:layout_height="wrap_content"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_accept_dialog_10m"
+                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                tools:layout_editor_absoluteX="84dp">
+
+            <TextView
+                    android:text="10분"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView5" android:textSize="24sp"/>
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/linear2"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_accept_dialog_15m" android:background="@drawable/border"
+                tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
+
+            <TextView
+                    android:text="15분"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView6" android:textSize="24sp"/>
+        </android.support.constraint.ConstraintLayout>
+        <Space
+                android:layout_width="12dp"
+                android:layout_height="wrap_content"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_accept_dialog_20m"
+                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                tools:layout_editor_absoluteX="84dp">
+
+            <TextView
+                    android:text="20분"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView7" android:textSize="24sp"/>
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/linear3"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/linear2" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_accept_dialog_25m" android:background="@drawable/border"
+                tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
+
+            <TextView
+                    android:text="25분"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView11" android:textSize="24sp"/>
+        </android.support.constraint.ConstraintLayout>
+        <Space
+                android:layout_width="12dp"
+                android:layout_height="wrap_content"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_accept_dialog_30m"
+                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                tools:layout_editor_absoluteX="84dp">
+
+            <TextView
+                    android:text="30분"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView10" android:textSize="24sp"/>
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+    <TextView
+            android:text="예상 제조 완료 시간을 선택해주세요."
+            android:layout_width="wrap_content"
+            android:layout_height="15dp"
+            android:id="@+id/textView2"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/linear3">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:id="@+id/btn_waiting_accept_dialog_cancle"
+                android:background="@drawable/border"
+                tools:layout_editor_absoluteY="261dp" tools:layout_editor_absoluteX="84dp">
+
+            <TextView
+                    android:text="취소"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView8"/>
+        </android.support.constraint.ConstraintLayout>
+        <Space
+                android:layout_width="12dp"
+                android:layout_height="wrap_content" android:layout_weight="1"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:id="@+id/btn_waiting_accept_dialog_ok"
+                android:background="@drawable/border"
+                tools:layout_editor_absoluteY="261dp" tools:layout_editor_absoluteX="196dp">
+
+            <TextView
+                    android:text="확인"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView9"/>
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
