--- a/app/src/main/res/layout/dialog_waiting_deny.xml
+++ b/app/src/main/res/layout/dialog_waiting_deny.xml
@@ -1,123 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_margin="0dp"
-        android:layout_width="match_parent" android:layout_height="404dp">
-    <RelativeLayout
-            android:id="@+id/btn_waiting_deny_dialog_ok"
-            android:layout_height="56dp" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" android:layout_marginEnd="29dp"
-            android:layout_alignParentBottom="true" android:layout_marginBottom="12dp"
-            android:layout_marginRight="29dp" android:layout_width="120dp" android:background="@drawable/border">
-        <TextView
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
-                android:text="확인"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_centerInParent="true"/>
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="330dp" tools:layout_editor_absoluteY="25dp">
 
-    </RelativeLayout>
-    <RelativeLayout
-            android:id="@+id/btn_waiting_deny_dialog_cancle"
-            android:layout_height="56dp" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true" android:layout_marginBottom="12dp"
-            android:layout_width="120dp" android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp" android:background="@drawable/border">
-        <TextView
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
-                android:text="취소"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_centerInParent="true"/>
 
-    </RelativeLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_deny_dialog_outofstock" android:background="@drawable/border"
+                tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
+
+            <TextView
+                    android:text="재료 소진"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/textView3"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+        </android.support.constraint.ConstraintLayout>
+        <Space
+                android:layout_width="12dp"
+                android:layout_height="wrap_content"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_deny_dialog_delay"
+                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                tools:layout_editor_absoluteX="84dp">
+
+            <TextView
+                    android:text="주문 지연"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView5"/>
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/linear2"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_deny_dialog_incorrect" android:background="@drawable/border"
+                tools:layout_editor_absoluteY="51dp" tools:layout_editor_absoluteX="196dp">
+
+            <TextView
+                    android:text="고객 정보\n 부정확"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView6"/>
+        </android.support.constraint.ConstraintLayout>
+        <Space
+                android:layout_width="12dp"
+                android:layout_height="wrap_content"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="64dp"
+                android:id="@+id/btn_waiting_deny_dialog_storeend"
+                android:background="@drawable/border" tools:layout_editor_absoluteY="51dp"
+                tools:layout_editor_absoluteX="84dp">
+
+            <TextView
+                    android:text="영업 종료"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView7"/>
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
     <TextView
             android:text="주문 거절 사유를 선택해주세요"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true" android:id="@+id/textView2" android:layout_marginTop="25dp"/>
-    <RelativeLayout
-            android:id="@+id/btn_waiting_deny_dialog_outofstock"
-            android:layout_height="80dp" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_width="120dp" android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp" android:background="@drawable/border" android:layout_marginTop="64dp">
-        <TextView
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
-                android:text="재료소진"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
-    <RelativeLayout
-            android:id="@+id/btn_waiting_deny_dialog_delay"
-            android:layout_height="80dp" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" android:layout_marginEnd="28dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="28dp" android:layout_width="120dp" android:background="@drawable/border"
-            android:layout_marginTop="64dp">
-
-        <TextView
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
-                android:text="주문 지연"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
-    <RelativeLayout
-            android:id="@+id/btn_waiting_deny_dialog_incorrect"
-            android:layout_height="80dp" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_width="120dp" android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp" android:background="@drawable/border" android:layout_marginTop="160dp">
-        <TextView
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
-                android:text="고객 정보\n부정확"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
-    <RelativeLayout
-            android:id="@+id/btn_waiting_deny_dialog_storeend"
-            android:layout_height="80dp" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" android:layout_marginEnd="28dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="28dp" android:layout_width="120dp" android:background="@drawable/border"
-            android:layout_marginTop="160dp">
-
-        <TextView
-                android:paddingVertical="8dp"
-                android:paddingHorizontal="16dp"
-                android:text="영업 종료"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:layout_centerInParent="true"/>
-
-    </RelativeLayout>
-    <RelativeLayout
-            android:id="@+id/btn_waiting_deny_dialog_userinput"
-            android:layout_height="64dp" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_width="256dp" android:layout_marginLeft="29dp"
-            android:layout_marginStart="28dp" android:background="@drawable/border"
-            android:layout_alignParentTop="true" android:layout_marginTop="256dp">
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="211dp"
+            android:layout_height="46dp"
+            android:id="@+id/constraintLayout5"
+            android:background="@drawable/border"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/linear2" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
 
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
-                android:layout_marginEnd="16dp" android:layout_alignParentBottom="true" android:id="@+id/editText"
-                android:layout_marginBottom="0dp" android:layout_marginRight="0dp" android:layout_marginTop="0dp"
-                android:layout_alignParentTop="true" android:layout_alignParentStart="true"
-                android:layout_marginLeft="0dp" android:layout_marginStart="25dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true" android:layout_centerHorizontal="true" android:hint="직접 입력"/>
-    </RelativeLayout>
-</RelativeLayout>
+                android:id="@+id/editText"
+                android:hint="직접 입력" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:id="@+id/btn_waiting_deny_dialog_cancle"
+                android:background="@drawable/border"
+                tools:layout_editor_absoluteY="261dp" tools:layout_editor_absoluteX="84dp">
+
+            <TextView
+                    android:text="취소"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView8"/>
+        </android.support.constraint.ConstraintLayout>
+        <Space
+                android:layout_width="12dp"
+                android:layout_height="wrap_content" android:layout_weight="1"/>
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:id="@+id/btn_waiting_deny_dialog_ok"
+                android:background="@drawable/border"
+                tools:layout_editor_absoluteY="261dp" tools:layout_editor_absoluteX="196dp">
+
+            <TextView
+                    android:text="확인"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView9"/>
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+</android.support.constraint.ConstraintLayout>
