--- a/app/src/main/res/layout/dialog_waiting_deny.xml
+++ b/app/src/main/res/layout/dialog_waiting_deny.xml
@@ -3,7 +3,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="330dp" tools:layout_editor_absoluteY="25dp">
+        android:layout_height="330dp" tools:layout_editor_absoluteY="25dp" android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
 
     <LinearLayout
