--- a/app/src/main/res/layout/dialog_waiting_accept.xml
+++ b/app/src/main/res/layout/dialog_waiting_accept.xml
@@ -3,9 +3,33 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="340dp" tools:layout_editor_absoluteY="25dp">
+        android:layout_height="400dp" tools:layout_editor_absoluteY="25dp"
+
+        android:focusable="true"
+        android:focusableInTouchMode="true" android:layout_marginLeft="40dp" android:layout_marginRight="40dp">
 
 
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="211dp"
+            android:layout_height="46dp"
+            android:id="@+id/constraintLayout5"
+            android:background="@drawable/border"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/linear3" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
+
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/et_waiting_accept_dialog_direct"
+                android:hint="직접 입력"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
@@ -147,8 +171,7 @@
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/linear3">
+            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
         <android.support.constraint.ConstraintLayout
                 android:layout_width="100dp"
                 android:layout_height="48dp"
