컴파일오류 해결!

--- a/app/src/main/res/layout/rv_item_done.xml
+++ b/app/src/main/res/layout/rv_item_done.xml
@@ -23,7 +23,7 @@
         <android.support.constraint.ConstraintLayout
                 android:id="@+id/cl_rv_topbar"
                 android:layout_width="324dp"
-                      android:background="@color/warmgray"
+                      android:background="@color/selfwriting"
 
                       android:layout_height="30dp">
             <TextView
