--- a/app/src/main/res/layout/rv_item_waiting.xml
+++ b/app/src/main/res/layout/rv_item_waiting.xml
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"
                     android:layout_marginTop="9dp" android:layout_marginStart="16dp"
-                    android:id="@+id/tv_rvitem_done_date"/>
+                    android:id="@+id/tv_rvitem_waiting_date"/>
             <TextView
                     android:text="14:06"
                     android:textColor="@color/black"
@@ -41,7 +41,7 @@
                     android:textSize="13sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/tv_rvitem_done_time" android:layout_marginTop="9dp"
+                    android:id="@+id/tv_rvitem_waiting_time" android:layout_marginTop="9dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"/>
@@ -53,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:layout_marginRight="16dp"
                     android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:id="@+id/tv_rvitem_done_ordernum"
+                    android:id="@+id/tv_rvitem_waiting_ordernum"
                     android:layout_marginTop="9dp" app:layout_constraintTop_toTopOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
@@ -63,7 +63,7 @@
                 android:textColor="@color/colorPrimary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_rvitem_done_nickname"
+                android:id="@+id/tv_rvitem_waiting_nickname"
                 android:layout_marginTop="8dp"
                 app:layout_editor_absoluteX="13dp"
                 app:layout_constraintTop_toBottomOf="@+id/cl_rv_topbar"/>
@@ -79,15 +79,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="13dp"
                 android:layout_marginStart="13dp"
-                android:id="@+id/tv_rvitem_done_menu"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_done_nickname"/>
+                android:id="@+id/tv_rvitem_waiting_menu"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_waiting_nickname"/>
         <TextView
                 android:text="5000원"
                 android:textSize="13sp"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_rvitem_done_cost"
+                android:id="@+id/tv_rvitem_waiting_cost"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +103,7 @@
                 android:layout_marginLeft="13dp"
                 android:layout_marginStart="13dp"
                 android:layout_marginTop="1dp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_done_menu"
+                app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_waiting_menu"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"/>
         <TextView
@@ -113,7 +113,7 @@
                 android:textSize="13sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_rvitem_done_request" app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/tv_rvitem_waiting_request" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="13dp"
                 android:layout_marginStart="13dp"
                 android:layout_marginTop="6dp"
@@ -129,18 +129,21 @@
                 android:layout_height="34dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="17dp"
-                android:id="@+id/btn_rvitem_ongoing_ready"
+                android:id="@+id/btn_rvitem_waiting_deny"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_goneMarginBottom="17dp"
                 android:layout_marginLeft="49dp" android:layout_marginStart="49dp"/>
         <Button
+                android:id="@+id/btn_rvitem_waiting_accept"
+
                 android:text="접수"
                 android:textColor="@color/white"
                 android:fontFamily="@font/nanumsquareroundotfr"
                 android:background="@drawable/waiting_order_border"
                 android:layout_width="109dp"
                 android:layout_height="34dp"
-                android:id="@+id/btn_rvitem_ongoing_gave" android:layout_marginBottom="17dp"
+
+                android:layout_marginBottom="17dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="49dp" android:layout_marginRight="49dp"
