--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
     <android.support.design.widget.TabLayout
             android:id="@+id/tl_main_act_top_menu"
             android:background="#FFFFFF"
-            app:tabIndicatorColor="#FF730D"
+            app:tabIndicatorColor="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentBottom="true" app:layout_constraintEnd_toEndOf="parent"
