--- a/app/src/main/res/layout/rv_item_waiting.xml
+++ b/app/src/main/res/layout/rv_item_waiting.xml
@@ -66,7 +66,8 @@
                 android:id="@+id/tv_rvitem_waiting_nickname"
                 android:layout_marginTop="8dp"
                 app:layout_editor_absoluteX="13dp"
-                app:layout_constraintTop_toBottomOf="@+id/cl_rv_topbar"/>
+                app:layout_constraintTop_toBottomOf="@+id/cl_rv_topbar" android:layout_marginStart="12dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"/>
 
         <!--tools:layout_editor_absoluteX="16dp"                />-->
 
