--- a/app/src/main/res/layout/rv_item_waiting.xml
+++ b/app/src/main/res/layout/rv_item_waiting.xml
@@ -1,154 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_height="204dp"
-        android:layout_width="match_parent">
+        xmlns:tools="http://schemas.android.com/tools"
+        android:background="@drawable/border"
+        android:layout_width="match_parent"
+        android:layout_height="183dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
+        android:id="@+id/cl" android:layout_marginTop="22dp">
 
     <android.support.constraint.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:background="@drawable/border"
-            android:layout_width="324dp"
-            android:layout_height="183dp" android:layout_marginTop="21dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp">
-
-        <android.support.constraint.ConstraintLayout
-                android:id="@+id/cl_rv_topbar"
-                android:layout_width="324dp"
-                android:background="@color/selfwriting"
-
-                android:layout_height="30dp">
-            <TextView
-                    android:text="2018.12.29"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/nanumsquareroundotfr"
-                    android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"
-                    android:layout_marginTop="9dp" android:layout_marginStart="16dp"
-                    android:id="@+id/tv_rvitem_waiting_date"/>
-            <TextView
-                    android:text="14:06"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/nanumsquareroundotfr"
-                    android:textSize="13sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_rvitem_waiting_time" android:layout_marginTop="9dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
-            <TextView
-                    android:text="주문번호"
-                    android:fontFamily="@font/nanumsquareroundotfr"
-                    android:textSize="13sp"
-                    android:textColor="@color/black"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:layout_marginRight="16dp"
-                    android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:id="@+id/tv_rvitem_waiting_ordernum"
-                    android:layout_marginTop="9dp" app:layout_constraintTop_toTopOf="parent"/>
-
-        </android.support.constraint.ConstraintLayout>
-
+            android:id="@+id/cl_rv_topbar"
+            android:layout_width="0dp"
+            android:background="@color/selfwriting"
+            android:layout_height="30dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
         <TextView
-                android:text="닉네임"
-                android:textColor="@color/colorPrimary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_rvitem_waiting_nickname"
-                android:layout_marginTop="8dp"
-                app:layout_editor_absoluteX="13dp"
-                app:layout_constraintTop_toBottomOf="@+id/cl_rv_topbar" android:layout_marginStart="12dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"/>
-
-        <!--tools:layout_editor_absoluteX="16dp"                />-->
-
-        <TextView
-                android:text="아메리카노 ICE \n(Regular / 1개)"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:layout_width="wrap_content"
-                android:layout_height="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="13dp"
-                android:layout_marginStart="13dp"
-                android:id="@+id/tv_rvitem_waiting_menu"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_waiting_nickname"/>
-        <TextView
-                android:text="5000원"
+                android:text="2018.12.29"
                 android:textSize="13sp"
+                android:fontFamily="@font/nanumsquareroundotfr"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="12dp"
+                android:layout_marginTop="9dp" android:layout_marginStart="16dp"
+                android:id="@+id/tv_rvitem_waiting_date"/>
+        <TextView
+                android:text="14:06"
+                android:textColor="@color/black"
+                android:fontFamily="@font/nanumsquareroundotfr"
+                android:textSize="13sp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_rvitem_waiting_cost"
+                android:id="@+id/tv_rvitem_waiting_time" android:layout_marginTop="9dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="24dp" android:layout_marginRight="24dp"/>
+                app:layout_constraintStart_toStartOf="parent"/>
         <TextView
-                android:text="Relgular/1개"
+                android:text="주문번호"
+                android:fontFamily="@font/nanumsquareroundotfr" android:textSize="13sp"
                 android:textColor="@color/black"
-                android:fontFamily="@font/nanumsquareroundotfr"
-                android:textSize="13sp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/size_amount" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="13dp"
-                android:layout_marginStart="13dp"
-                android:layout_marginTop="1dp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_waiting_menu"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"/>
-        <TextView
-                android:fontFamily="@font/nanumsquareroundotfr"
-                android:text="요청사항"
-                android:textColor="@color/warmgray"
-                android:textSize="13sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_rvitem_waiting_request" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="13dp"
-                android:layout_marginStart="13dp"
-                android:layout_marginTop="6dp"
-                app:layout_constraintTop_toBottomOf="@+id/size_amount"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"/>
-        <Button
-                android:text="거절"
-                android:fontFamily="@font/nanumsquareroundotfr"
-                android:textColor="@color/white"
-                android:background="@drawable/delivery_complete"
-                android:layout_width="109dp"
-                android:layout_height="34dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="17dp"
-                android:id="@+id/btn_rvitem_waiting_deny"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_goneMarginBottom="17dp"
-                android:layout_marginLeft="49dp" android:layout_marginStart="49dp"/>
-        <Button
-                android:id="@+id/btn_rvitem_waiting_accept"
+                android:layout_height="wrap_content" android:layout_marginRight="12dp"
+                android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/tv_rvitem_waiting_ordernum"
+                android:layout_marginTop="9dp" app:layout_constraintTop_toTopOf="parent"/>
 
-                android:text="접수"
-                android:textColor="@color/white"
-                android:fontFamily="@font/nanumsquareroundotfr"
-                android:background="@drawable/waiting_order_border"
-                android:layout_width="109dp"
-                android:layout_height="34dp"
-
-                android:layout_marginBottom="17dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="49dp" android:layout_marginRight="49dp"
-                android:clickable="false" android:enabled="false"/>
     </android.support.constraint.ConstraintLayout>
 
+    <TextView
+            android:text="닉네임"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_rvitem_waiting_nickname"
+            android:layout_marginTop="8dp"
+            app:layout_editor_absoluteX="13dp"
+            app:layout_constraintTop_toBottomOf="@+id/cl_rv_topbar" android:layout_marginStart="13dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="13dp"/>
+
+
+    <TextView
+            android:text="아메리카노 ICE \n(Regular / 1개)"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="13dp"
+            android:layout_marginStart="13dp"
+            android:id="@+id/tv_rvitem_waiting_menu"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_waiting_nickname"/>
+    <TextView
+            android:text="5000원"
+            android:textSize="13sp"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_rvitem_waiting_cost"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"/>
+    <TextView
+            android:text="Relgular/1개"
+            android:textColor="@color/black"
+            android:fontFamily="@font/nanumsquareroundotfr"
+            android:textSize="13sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_rvitem_waiting_size_amount" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="13dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="1dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_waiting_menu"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+    <TextView
+            android:fontFamily="@font/nanumsquareroundotfr"
+            android:text="요청사항"
+            android:textColor="@color/warmgray"
+            android:textSize="13sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_rvitem_waiting_request" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="13dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="6dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_rvitem_waiting_size_amount"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+    <Button
+            android:text="거절"
+            android:fontFamily="@font/nanumsquareroundotfr"
+            android:textColor="@color/white"
+            android:background="@drawable/delivery_complete"
+            android:layout_width="109dp"
+            android:layout_height="34dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="17dp"
+            android:id="@+id/btn_rvitem_waiting_deny"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_goneMarginBottom="17dp"
+            android:layout_marginLeft="49dp" android:layout_marginStart="49dp"/>
+    <Button
+            android:id="@+id/btn_rvitem_waiting_accept"
+
+            android:text="접수"
+            android:textColor="@color/white"
+            android:fontFamily="@font/nanumsquareroundotfr"
+            android:background="@drawable/waiting_order_border"
+            android:layout_width="109dp"
+            android:layout_height="34dp"
+
+            android:layout_marginBottom="17dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="49dp" android:layout_marginRight="49dp"
+            android:clickable="false" android:enabled="false"/>
 </android.support.constraint.ConstraintLayout>
