--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            android:elevation="3dp"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -19,7 +21,8 @@
                 android:fontFamily="@font/nanumsquareroundotfr"
                 android:textColor="@color/warmgray"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/tv_orderlist" android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_orderlist" android:layout_weight="1"
                 android:textSize="17sp" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
