--- a/app/src/main/res/layout/rv_item_done.xml
+++ b/app/src/main/res/layout/rv_item_done.xml
@@ -59,6 +59,7 @@
             android:textColor="@color/warmgray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareroundotfr"
             android:id="@+id/tv_rvitem_done_nickname"
             android:layout_marginTop="8dp"
             app:layout_editor_absoluteX="13dp"
@@ -71,7 +72,7 @@
             android:text="아메리카노 ICE \n(Regular / 1개)"
             android:textColor="@color/black"
             android:textStyle="bold"
-
+            android:fontFamily="@font/nanumsquareroundotfr"
             android:layout_width="wrap_content"
             android:layout_height="16dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="13dp"
@@ -85,11 +86,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_rvitem_done_cost"
+            android:fontFamily="@font/nanumsquareroundotfr"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="12dp" android:layout_marginRight="12dp"
-            app:layout_constraintVertical_bias="0.723"/>
+            app:layout_constraintVertical_bias="0.663"/>
     <TextView
             android:text="Relgular/1개"
             android:textColor="@color/black"
