--- a/app/src/main/res/layout/rv_item_ongoing.xml
+++ b/app/src/main/res/layout/rv_item_ongoing.xml
@@ -60,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_rvitem_ongoing_nickname"
+            android:fontFamily="@font/nanumsquareroundotfr"
             android:layout_marginTop="8dp"
             app:layout_editor_absoluteX="13dp"
             app:layout_constraintTop_toBottomOf="@+id/cl_rv_topbar" android:layout_marginStart="13dp"
@@ -71,6 +72,7 @@
             android:text="아메리카노 ICE \n(Regular / 1개)"
             android:textColor="@color/black"
             android:textStyle="bold"
+            android:fontFamily="@font/nanumsquareroundotfr"
             android:layout_width="wrap_content"
             android:layout_height="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_rvitem_ongoing_cost"
+            android:fontFamily="@font/nanumsquareroundotfr"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
