--- a/app/src/main/res/layout/rv_item_waiting.xml
+++ b/app/src/main/res/layout/rv_item_waiting.xml
@@ -58,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_rvitem_waiting_nickname"
+            android:fontFamily="@font/nanumsquareroundotfr"
             android:layout_marginTop="8dp"
             app:layout_editor_absoluteX="13dp"
             app:layout_constraintTop_toBottomOf="@+id/cl_rv_topbar" android:layout_marginStart="13dp"
@@ -68,6 +69,7 @@
             android:text="아메리카노 ICE \n(Regular / 1개)"
             android:textColor="@color/black"
             android:textStyle="bold"
+            android:fontFamily="@font/nanumsquareroundotfr"
             android:layout_width="wrap_content"
             android:layout_height="16dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +83,7 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquareroundotfr"
             android:id="@+id/tv_rvitem_waiting_cost"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
